Update Batman review with revised content and improved analysis
- Updated content with more balanced critique and better structure
- Fixed typos: 'encountre' → 'encounter', 'accidently' → 'accidentally', 'embrasing' → 'embracing'
- Improved AI summary to better reflect the review's nuanced take
- Increased score from 35 to 45 (more balanced assessment)
- Better captures the film's strengths (detective work, aesthetics) and weaknesses (tone, casting)
- Cache version: 2025-10-07-2019

The review now better reflects the film's mixed quality rather than being purely negative

--- a/review/25.html
+++ b/review/25.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="The Batman (2022) - The reviewer criticizes many aspects of the film, including the director, the length, and the inconsistency in tone. The score indicates that this mov...">
+    <meta name="description" content="The Batman (2022) - tldr: A tonally inconsistent Batman film that can't decide between dark psychological thriller and slapstick comedy. While it delivers on detective wo...">
     <meta name="keywords" content="movie reviews, film criticism, snarky reviews, cinema, movies, entertainment, The Batman (2022)">
     <meta name="author" content="Snarkflix">
     
@@ -22,8 +22,8 @@
     <!-- Open Graph / Facebook / WhatsApp -->
     <meta property="og:type" content="article">
     <meta property="og:url" content="https://snarkflix.com/review/25">
-    <meta property="og:title" content="The Batman (2022) Review - SnarkAI Score: 35/100 | Snarkflix">
-    <meta property="og:description" content="The Batman (2022) - The reviewer criticizes many aspects of the film, including the director, the length, and the inconsistency in tone. The score indicates that this movie is below average and not very enjoyable to watc...">
+    <meta property="og:title" content="The Batman (2022) Review - SnarkAI Score: 45/100 | Snarkflix">
+    <meta property="og:description" content="The Batman (2022) - tldr: A tonally inconsistent Batman film that can't decide between dark psychological thriller and slapstick comedy. While it delivers on detective work (finally!) and has solid aesthetics, the 3-hour...">
     <meta property="og:image" content="https://snarkflix.com/images/reviews/the-batman/header-the-batman.avif">
     <meta property="og:image:secure_url" content="https://snarkflix.com/images/reviews/the-batman/header-the-batman.avif">
     <meta property="og:image:type" content="image/png">
@@ -40,13 +40,13 @@
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://snarkflix.com/review/25">
-    <meta property="twitter:title" content="The Batman (2022) Review - SnarkAI Score: 35/100 | Snarkflix">
-    <meta property="twitter:description" content="The Batman (2022) - The reviewer criticizes many aspects of the film, including the director, the length, and the inconsistency in tone. The score indicates that this movie is below average and not very enjoyable to watc...">
+    <meta property="twitter:title" content="The Batman (2022) Review - SnarkAI Score: 45/100 | Snarkflix">
+    <meta property="twitter:description" content="The Batman (2022) - tldr: A tonally inconsistent Batman film that can't decide between dark psychological thriller and slapstick comedy. While it delivers on detective work (finally!) and has solid aesthetics, the 3-hour...">
     <meta property="twitter:image" content="https://snarkflix.com/images/reviews/the-batman/header-the-batman.avif">
     <meta property="twitter:image:alt" content="The Batman (2022) Review">
     <meta property="twitter:site" content="@snarkflix">
 
-    <title>The Batman (2022) Review - SnarkAI Score: 35/100 | Snarkflix</title>
+    <title>The Batman (2022) Review - SnarkAI Score: 45/100 | Snarkflix</title>
     
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-8SV8W7XL64"></script>
