--- a/review/45.html
+++ b/review/45.html
@@ -24,8 +24,8 @@
     <meta property="og:url" content="https://snarkflix.com/review/45">
     <meta property="og:title" content="KPop DemonHunters (2025) Review - SnarkAI Score: 68/100 | Snarkflix">
     <meta property="og:description" content="KPop DemonHunters (2025) - tldr: A fun but flawed anime-musical hybrid that takes K-pop, demon hunting, and girl power and throws them in a blender. The 3D animation looks odd with 2D anime shortcuts, but the demon designs are ...">
-    <meta property="og:image" content="https://snarkflix.com/images/reviews/kpop-demonhunters-2025/header-kpop-demonhunters-2025.webp">
-    <meta property="og:image:secure_url" content="https://snarkflix.com/images/reviews/kpop-demonhunters-2025/header-kpop-demonhunters-2025.webp">
+    <meta property="og:image" content="https://snarkflix.com/images/reviews/kpop-demonhunters-2025/header-kpop-demonhunters-2025.png">
+    <meta property="og:image:secure_url" content="https://snarkflix.com/images/reviews/kpop-demonhunters-2025/header-kpop-demonhunters-2025.png">
     <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
@@ -34,15 +34,15 @@
     <meta property="og:locale" content="en_US">
     
     <!-- WhatsApp specific meta tags -->
-    <meta property="og:image:url" content="https://snarkflix.com/images/reviews/kpop-demonhunters-2025/header-kpop-demonhunters-2025.webp">
-    <meta name="twitter:image:src" content="https://snarkflix.com/images/reviews/kpop-demonhunters-2025/header-kpop-demonhunters-2025.webp">
+    <meta property="og:image:url" content="https://snarkflix.com/images/reviews/kpop-demonhunters-2025/header-kpop-demonhunters-2025.png">
+    <meta name="twitter:image:src" content="https://snarkflix.com/images/reviews/kpop-demonhunters-2025/header-kpop-demonhunters-2025.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://snarkflix.com/review/45">
     <meta property="twitter:title" content="KPop DemonHunters (2025) Review - SnarkAI Score: 68/100 | Snarkflix">
     <meta property="twitter:description" content="KPop DemonHunters (2025) - tldr: A fun but flawed anime-musical hybrid that takes K-pop, demon hunting, and girl power and throws them in a blender. The 3D animation looks odd with 2D anime shortcuts, but the demon designs are ...">
-    <meta property="twitter:image" content="https://snarkflix.com/images/reviews/kpop-demonhunters-2025/header-kpop-demonhunters-2025.webp">
+    <meta property="twitter:image" content="https://snarkflix.com/images/reviews/kpop-demonhunters-2025/header-kpop-demonhunters-2025.png">
     <meta property="twitter:image:alt" content="KPop DemonHunters (2025) Review">
     <meta property="twitter:site" content="@snarkflix">
 
