Update Black Adam review with revised content and improved metadata
- Enhanced reading duration from "2 min read" to "4 min read"
- Updated AI summary and content for a more nuanced critique of the film
- Revised meta descriptions in review HTML files to reflect the new summary
- Cache version: 2025-10-07-2301

This update provides a more comprehensive analysis of the film's strengths and weaknesses, improving the overall quality of the review.

--- a/review/22.html
+++ b/review/22.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Black Adam (2022) - The review highlights several issues with the movie, including a clunky and dull storyline, poor character development, and an inconsistent tone. Whil...">
+    <meta name="description" content="Black Adam (2022) - A visually impressive but narratively broken superhero film that squanders its strong cast and compelling source material. The Rock's ego-driven chang...">
     <meta name="keywords" content="movie reviews, film criticism, snarky reviews, cinema, movies, entertainment, Black Adam (2022)">
     <meta name="author" content="Snarkflix">
     
@@ -23,7 +23,7 @@
     <meta property="og:type" content="article">
     <meta property="og:url" content="https://snarkflix.com/review/22">
     <meta property="og:title" content="Black Adam (2022) Review - SnarkAI Score: 35/100 | Snarkflix">
-    <meta property="og:description" content="Black Adam (2022) - The review highlights several issues with the movie, including a clunky and dull storyline, poor character development, and an inconsistent tone. While the visuals and cast are good, they do not make ...">
+    <meta property="og:description" content="Black Adam (2022) - A visually impressive but narratively broken superhero film that squanders its strong cast and compelling source material. The Rock's ego-driven changes to Black Adam's character fundamentally undermi...">
     <meta property="og:image" content="https://snarkflix.com/images/reviews/black-adam/header-black-adam.avif">
     <meta property="og:image:secure_url" content="https://snarkflix.com/images/reviews/black-adam/header-black-adam.avif">
     <meta property="og:image:type" content="image/png">
@@ -41,7 +41,7 @@
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://snarkflix.com/review/22">
     <meta property="twitter:title" content="Black Adam (2022) Review - SnarkAI Score: 35/100 | Snarkflix">
-    <meta property="twitter:description" content="Black Adam (2022) - The review highlights several issues with the movie, including a clunky and dull storyline, poor character development, and an inconsistent tone. While the visuals and cast are good, they do not make ...">
+    <meta property="twitter:description" content="Black Adam (2022) - A visually impressive but narratively broken superhero film that squanders its strong cast and compelling source material. The Rock's ego-driven changes to Black Adam's character fundamentally undermi...">
     <meta property="twitter:image" content="https://snarkflix.com/images/reviews/black-adam/header-black-adam.avif">
     <meta property="twitter:image:alt" content="Black Adam (2022) Review">
     <meta property="twitter:site" content="@snarkflix">
