--- a/review/45.html
+++ b/review/45.html
@@ -26,7 +26,7 @@
     <meta property="og:description" content="KPop DemonHunters (2025) - tldr: A fun but flawed anime-musical hybrid that takes K-pop, demon hunting, and girl power and throws them in a blender. The 3D animation looks odd with 2D anime shortcuts, but the demon designs are ...">
     <meta property="og:image" content="https://snarkflix.com/images/reviews/kpop-demonhunters-2025/header-kpop-demonhunters-2025.webp">
     <meta property="og:image:secure_url" content="https://snarkflix.com/images/reviews/kpop-demonhunters-2025/header-kpop-demonhunters-2025.webp">
-    <meta property="og:image:type" content="image/webp">
+    <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
     <meta property="og:image:alt" content="KPop DemonHunters (2025) Review">
