Enhance image handling and optimization across the site
- Added width and height attributes to various image tags in index.html for better layout stability and performance.
- Updated the createResponsiveImage function in script.js to include width and height attributes for fallback images.
- Introduced CSS rules in styles.css to optimize image display and prevent layout shifts, including aspect-ratio support.

These changes improve image loading performance and enhance user experience by reducing layout shifts during image loading.

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                     <source srcset="images/site-assets/logo-400w.webp 400w, images/site-assets/logo-800w.webp 800w, images/site-assets/logo-1200w.webp 1200w" 
                             sizes="(max-width: 200px) 200px, (max-width: 400px) 200px, 200px" 
                             type="image/webp">
-                    <img src="images/site-assets/logo.avif" alt="Snarkflix Logo" class="snarkflix-hero-logo" fetchpriority="high">
+                    <img src="images/site-assets/logo.avif" alt="Snarkflix Logo" class="snarkflix-hero-logo" fetchpriority="high" width="200" height="60">
                 </picture>
             </div>
         </div>
@@ -184,7 +184,7 @@
                     <div class="snarkflix-category-image action-category">
                         <picture>
                             <source srcset="images/category-icons/Action.webp" type="image/webp">
-                            <img src="images/category-icons/Action.png" alt="Action" class="snarkflix-category-icon" loading="lazy">
+                            <img src="images/category-icons/Action.png" alt="Action" class="snarkflix-category-icon" loading="lazy" width="48" height="48">
                         </picture>
                     </div>
                     <h3>Action</h3>
@@ -194,7 +194,7 @@
                     <div class="snarkflix-category-image adventure-category">
                         <picture>
                             <source srcset="images/category-icons/Adventure.webp" type="image/webp">
-                            <img src="images/category-icons/Adventure.png" alt="Adventure" class="snarkflix-category-icon" loading="lazy">
+                            <img src="images/category-icons/Adventure.png" alt="Adventure" class="snarkflix-category-icon" loading="lazy" width="48" height="48">
                         </picture>
                     </div>
                     <h3>Adventure</h3>
@@ -204,7 +204,7 @@
                     <div class="snarkflix-category-image animation-category">
                         <picture>
                             <source srcset="images/category-icons/Animation.webp" type="image/webp">
-                            <img src="images/category-icons/Animation.png" alt="Animation" class="snarkflix-category-icon" loading="lazy">
+                            <img src="images/category-icons/Animation.png" alt="Animation" class="snarkflix-category-icon" loading="lazy" width="48" height="48">
                         </picture>
                     </div>
                     <h3>Animation</h3>
@@ -214,7 +214,7 @@
                     <div class="snarkflix-category-image comedy-category">
                         <picture>
                             <source srcset="images/category-icons/Comedy.webp" type="image/webp">
-                            <img src="images/category-icons/Comedy.png" alt="Comedy" class="snarkflix-category-icon" loading="lazy">
+                            <img src="images/category-icons/Comedy.png" alt="Comedy" class="snarkflix-category-icon" loading="lazy" width="48" height="48">
                         </picture>
                     </div>
                     <h3>Comedy</h3>
@@ -224,7 +224,7 @@
                     <div class="snarkflix-category-image drama-category">
                         <picture>
                             <source srcset="images/category-icons/Drama.webp" type="image/webp">
-                            <img src="images/category-icons/Drama.png" alt="Drama" class="snarkflix-category-icon" loading="lazy">
+                            <img src="images/category-icons/Drama.png" alt="Drama" class="snarkflix-category-icon" loading="lazy" width="48" height="48">
                         </picture>
                     </div>
                     <h3>Drama</h3>
@@ -234,7 +234,7 @@
                     <div class="snarkflix-category-image horror-category">
                         <picture>
                             <source srcset="images/category-icons/Horror.webp" type="image/webp">
-                            <img src="images/category-icons/Horror.png" alt="Horror" class="snarkflix-category-icon" loading="lazy">
+                            <img src="images/category-icons/Horror.png" alt="Horror" class="snarkflix-category-icon" loading="lazy" width="48" height="48">
                         </picture>
                     </div>
                     <h3>Horror</h3>
@@ -244,7 +244,7 @@
                     <div class="snarkflix-category-image scifi-category">
                         <picture>
                             <source srcset="images/category-icons/SciFi.webp" type="image/webp">
-                            <img src="images/category-icons/SciFi.png" alt="Sci-Fi" class="snarkflix-category-icon" loading="lazy">
+                            <img src="images/category-icons/SciFi.png" alt="Sci-Fi" class="snarkflix-category-icon" loading="lazy" width="48" height="48">
                         </picture>
                     </div>
                     <h3>Sci-Fi</h3>
@@ -254,7 +254,7 @@
                     <div class="snarkflix-category-image musical-category">
                         <picture>
                             <source srcset="images/category-icons/Musical.webp" type="image/webp">
-                            <img src="images/category-icons/Musical.png" alt="Musical" class="snarkflix-category-icon" loading="lazy">
+                            <img src="images/category-icons/Musical.png" alt="Musical" class="snarkflix-category-icon" loading="lazy" width="48" height="48">
                         </picture>
                     </div>
                     <h3>Musical</h3>
@@ -289,7 +289,7 @@
                 <div class="snarkflix-about-image">
                     <picture>
                     <source srcset="images/site-assets/merlin.webp" type="image/webp">
-                    <img src="images/site-assets/merlin.png" alt="Merlin the Bernedoodle" class="snarkflix-about-logo" loading="lazy">
+                    <img src="images/site-assets/merlin.png" alt="Merlin the Bernedoodle" class="snarkflix-about-logo" loading="lazy" width="200" height="200">
                 </picture>
                 </div>
             </div>
