Enhance review page experience and accessibility features
- Updated review page redirects to use client-side routing format for improved user experience.
- Added a visible "Skip to main content" link for better accessibility, which appears during keyboard navigation.
- Implemented a loading skeleton for review pages to enhance perceived performance during content loading.
- Refactored meta tag updates for social media sharing into a reusable function for cleaner code and consistency.
- Improved URL handling with History API for better navigation and state management.

--- a/index.html
+++ b/index.html
@@ -93,6 +93,9 @@
     </script>
 </head>
 <body>
+    <!-- Skip to main content link -->
+    <a href="#reviews" class="snarkflix-skip-link" aria-label="Skip to main content">Skip to main content</a>
+    
     <!-- Header -->
     <header class="snarkflix-header">
         <nav class="snarkflix-nav" role="navigation" aria-label="Main navigation">
