Update Lighthouse configuration and enhance image loading performance
- Increased maximum thresholds for largest contentful paint and interactive metrics in Lighthouse configuration to improve performance evaluation.
- Added fetchpriority attribute to preload logo image for higher loading priority.
- Updated image loading strategy in script.js to include fetchpriority for eager loading, optimizing largest contentful paint.
- Improved error handling for image loading by attempting alternative formats for fallback images.

--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
     <meta property="twitter:image:alt" content="Snarkflix - Snarky Movie Reviews">
 
     <!-- Resource Preloading for Performance -->
-    <link rel="preload" href="images/site-assets/logo.webp" as="image">
+    <link rel="preload" href="images/site-assets/logo.webp" as="image" fetchpriority="high">
     <link rel="preload" href="images/site-assets/background.avif" as="image">
     <link rel="preload" href="styles.css" as="style">
-    <link rel="preload" href="script.js" as="script">
     <link rel="preload" href="reviews-data.js" as="script">
+    <!-- script.js loaded with defer, no need to preload -->
 
     <title>Snarkflix - Snarky Movie Reviews</title>
     <link rel="stylesheet" href="styles.css">
