--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
     <meta property="twitter:image:alt" content="Snarkflix - Snarky Movie Reviews">
 
     <!-- Resource Preloading for Performance -->
-    <link rel="preload" href="images/site-assets/logo.webp" as="image" fetchpriority="high">
-    <link rel="preload" href="images/site-assets/background.avif" as="image">
-    <link rel="preload" href="styles.css" as="style">
-    <link rel="preload" href="reviews-data.js" as="script">
-    <!-- script.js loaded with defer, no need to preload -->
+    <!-- Using absolute paths to avoid issues on review pages -->
+    <link rel="preload" href="/images/site-assets/logo.webp" as="image" fetchpriority="high">
+    <link rel="preload" href="/images/site-assets/background.avif" as="image">
+    <link rel="preload" href="/styles.css" as="style">
+    <!-- reviews-data.js preload removed - it's loaded with defer and may not be needed on review pages -->
 
     <title>Snarkflix - Snarky Movie Reviews</title>
     <link rel="stylesheet" href="styles.css">
