--- a/index.html
+++ b/index.html
@@ -53,6 +53,10 @@
     <!-- reviews-data.js preload removed - it's loaded with defer and may not be needed on review pages -->
 
     <title>Snarkflix - Snarky Movie Reviews</title>
+    
+    <!-- Accessibility: Live region for dynamic content announcements -->
+    <div id="a11y-live-region" class="sr-only" aria-live="polite" aria-atomic="true"></div>
+    <div id="a11y-status-region" class="sr-only" aria-live="status" aria-atomic="true"></div>
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -152,7 +156,7 @@
     </section>
 
     <!-- Featured Reviews Section -->
-    <section id="reviews" class="snarkflix-featured-reviews" role="main">
+    <section id="reviews" class="snarkflix-featured-reviews" role="main" aria-label="Movie Reviews">
         <div class="snarkflix-container">
             <div class="snarkflix-reviews-header">
                 <h2 class="snarkflix-section-title">
@@ -185,8 +189,8 @@
                     </select>
                 </div>
             </div>
-            <div id="search-results-count" class="snarkflix-search-results-count" style="display: none;"></div>
-            <div class="snarkflix-reviews-grid" id="reviews-grid">
+            <div id="search-results-count" class="snarkflix-search-results-count" style="display: none;" role="status" aria-live="polite"></div>
+            <div class="snarkflix-reviews-grid" id="reviews-grid" role="list" aria-label="Movie review cards">
                 <!-- Reviews will be dynamically loaded here -->
             </div>
             <div class="snarkflix-load-more">
@@ -198,7 +202,7 @@
     </section>
 
     <!-- Categories Section -->
-    <section id="categories" class="snarkflix-categories">
+    <section id="categories" class="snarkflix-categories" role="navigation" aria-label="Browse reviews by category">
         <div class="snarkflix-container">
             <h2 class="snarkflix-section-title">Browse by Category</h2>
             <div class="snarkflix-categories-grid">
@@ -333,6 +337,15 @@
                 </div>
                         <div class="snarkflix-footer-social">
                             <p>&copy; 2025 Snarkflix. All rights reserved.</p>
+                            <details class="snarkflix-keyboard-shortcuts">
+                                <summary>Keyboard Shortcuts</summary>
+                                <ul>
+                                    <li><kbd>/</kbd> - Focus search input</li>
+                                    <li><kbd>↑</kbd> <kbd>↓</kbd> <kbd>←</kbd> <kbd>→</kbd> - Navigate review cards</li>
+                                    <li><kbd>Enter</kbd> - Open selected review</li>
+                                    <li><kbd>Esc</kbd> - Close search suggestions</li>
+                                </ul>
+                            </details>
                         </div>
             </div>
         </div>
