--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@
     <link rel="preload" href="/images/site-assets/logo.webp" as="image" fetchpriority="high">
     <link rel="preload" href="/images/site-assets/background.avif" as="image">
     <link rel="preload" href="/styles.css" as="style">
+    <!-- Preload critical font weights -->
+    <link rel="preload" href="https://fonts.gstatic.com/s/inter/v13/UcCO3FwrK3iLTeHuS_fvQtMwCp50KnMw2boKoduKmMEVuLyfAZ9hiJ-Ek-_EeA.woff2" as="font" type="font/woff2" crossorigin>
     <!-- reviews-data.js preload removed - it's loaded with defer and may not be needed on review pages -->
 
     <title>Snarkflix - Snarky Movie Reviews</title>
@@ -62,6 +64,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet" media="print" onload="this.media='all'">
     <noscript><link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet"></noscript>
+    <!-- Font-display: swap is already included in the Google Fonts URL via &display=swap -->
     
     <!-- Structured Data (JSON-LD) -->
     <script type="application/ld+json">
@@ -149,7 +152,7 @@
                     <source srcset="images/site-assets/logo-400w.webp 400w, images/site-assets/logo-800w.webp 800w, images/site-assets/logo-1200w.webp 1200w" 
                             sizes="(max-width: 300px) 300px, (max-width: 400px) 300px, 300px" 
                             type="image/webp">
-                    <img src="images/site-assets/logo.avif" alt="Snarkflix Logo" class="snarkflix-hero-logo" fetchpriority="high" width="300" height="300">
+                    <img src="images/site-assets/logo.avif" alt="Snarkflix Logo" class="snarkflix-hero-logo" fetchpriority="high" loading="eager" width="300" height="300">
                 </picture>
             </div>
         </div>
@@ -315,7 +318,7 @@
                 <div class="snarkflix-about-image">
                     <picture>
                     <source srcset="images/site-assets/merlin.webp" type="image/webp">
-                    <img src="images/site-assets/merlin.png" alt="Merlin the Bernedoodle" class="snarkflix-about-logo" loading="lazy" width="200" height="200">
+                    <img src="images/site-assets/merlin.png" alt="Merlin the Bernedoodle" class="snarkflix-about-logo" loading="lazy" width="200" height="200" style="background: linear-gradient(90deg, #f0f0f0 25%, #e0e0e0 50%, #f0f0f0 75%); background-size: 200% 100%; animation: shimmer 1.5s infinite;">
                 </picture>
                 </div>
             </div>
