Implement mobile menu enhancements in Snarkflix
- Added close button and backdrop for mobile menu to improve user experience.
- Refactored mobile menu toggle functionality for better state management.
- Updated CSS for mobile menu styles, including transitions and touch target sizes.
- Enhanced mobile layout for navigation links and review cards to ensure usability on smaller screens.

--- a/index.html
+++ b/index.html
@@ -111,10 +111,12 @@
                     <h1><a href="/" aria-label="Snarkflix home">Snarkflix</a></h1>
                 </div>
                 <div class="snarkflix-nav-links">
+                    <button class="snarkflix-mobile-menu-close" aria-label="Close menu">×</button>
                     <a href="#reviews" class="snarkflix-nav-link">Reviews</a>
                     <a href="#categories" class="snarkflix-nav-link">Categories</a>
                     <a href="#about" class="snarkflix-nav-link">About</a>
                 </div>
+                <div class="snarkflix-mobile-menu-backdrop"></div>
                 <button class="snarkflix-mobile-menu-toggle snarkflix-mobile-menu-btn" aria-label="Toggle mobile menu" aria-expanded="false">
                     <span></span>
                     <span></span>
